# Pari-ci

./: .gitignore  LICENSE  README.md  docker-compose.yml
client/: Dockerfile  (+4 more)
server/: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migration  Rocket.toml  correct_stop_sequence.sh  diesel.toml  docker-compose.yml  graph.dot  meilisearch.sh  meilisearchWindows.bash  pom.xml
server/migrations/2024-06-04-154621_agency/: down.sql  up.sql
server/migrations/2024-06-05-154144_routes/: down.sql  up.sql
server/migrations/2024-06-08-150837_calendar/: up.sql
server/migrations/2024-06-08-150837_trips/: up.sql
server/migrations/2024-06-08-152741_calendar/: down.sql  up.sql
server/migrations/2024-06-08-152741_trips/: down.sql  up.sql
server/migrations/2024-06-08-152751_calendar_dates/: up.sql
server/migrations/2024-06-08-184732_stops/: down.sql  up.sql
server/migrations/2024-06-08-224856_stop_times/: down.sql  up.sql
server/migrations/2024-06-11-001248_views/: down.sql  up.sql
server/migrations/2024-06-11-164300_transfers/: up.sql
server/migrations/2024-06-12-072417_average_stop_times/: down.sql  up.sql
server/migrations/2024-06-15-190231_routes-trace/: down.sql  up.sql
server/migrations/2024-06-18-101921_stop_times_joined/: down.sql  up.sql
server/migrations/2024-06-21-074412_trips_between_stop_by_hour/: down.sql  up.sql
server/migrations/2024-06-25-113048_shared/: down.sql  up.sql
server/migrations/2024-06-28-075401_ratings/: up.sql
server/src/: graph_test.rs  main.rs  meilisearch.rs  schema.rs  setup_db.rs
server/src/data/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt
server/src/models/: mod.rs
(+89 files in other folders)
