[package]
name = "citymapper-server"
version = "0.1.0"
edition = "2021"
default-run = "citymapper-server"

[[bin]]
name = "graph_test"
path = "src/tools/graph/graph_test.rs"

[[bin]]
name = "setup_db"
path = "src/setup_db.rs"

[[bin]]
name = "setup_meilisearch"
path = "src/meilisearch.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"]}
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "time"] }
dotenvy = "0.15"
serde = { version = "1.0.152", features = ["derive"] }
time = { version = "0.3.36", features = ["serde-human-readable"] }
meilisearch-sdk = "0.26.1"
futures = "0.3"
serde_json = "1.0"
tokio = "1.38.0"
base64 = "0.22.1"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
